fix login spacing

--- a/client/main/main.styl
+++ b/client/main/main.styl
@@ -273,12 +273,15 @@ float: left; }
     display block
     height 50px
 a.sitelink
+    border-radius(0.2em)
     font-family monospace
     display inline-block
     margin-right 1em
     v-center(12px)
     font-size 20px
     color logored
+a.sitelink.grn.login
+    margin-right -0.5em
 a.sitelink:hover
     background logored
     color white
